# tcc-renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
prints/: hexagon.psd
shaders/: ambient.frag  ambient.vert  color.frag  color.vert  simple.frag  simple.vert  tex.frag  tex.vert
src/: camera.h  chunk.cpp  chunk.h  core.cpp  core.h  entity.h  height_generator.h  loader.h  main.cpp  model_texture.h  my_math.h  raw_model.h  renderer.h  screen.h  shader.cpp  shader.h  terrain.h  terrain_renderer.h  texture.h  textured_model.h
